unpackaged/objects/MemberInfo__c.object
<CustomObject>
    <fields>
        <fullName>Issues_from_Sales__c</fullName>
        <label>営業→AC伝達事項</label>
        <length>384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jibyo__c</fullName>
        <label>持病</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>管轄地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CountryName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>台北</fullName>
                </value>
                <value>
                    <fullName>東京</fullName>
                </value>
                <value>
                    <fullName>大阪</fullName>
                </value>
                <value>
                    <fullName>名古屋</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ホーチミン</fullName>
                </value>
                <value>
                    <fullName>ニューデリー</fullName>
                </value>
                <value>
                    <fullName>チェンナイ</fullName>
                </value>
                <value>
                    <fullName>ジャカルタ</fullName>
                </value>
                <value>
                    <fullName>マニラ</fullName>
                </value>
                <value>
                    <fullName>プノンペン</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>ヤンゴン</fullName>
                </value>
                <value>
                    <fullName>コロンボ</fullName>
                </value>
                <value>
                    <fullName>バンコク</fullName>
                </value>
                <value>
                    <fullName>クアラルンプール</fullName>
                </value>
                <value>
                    <fullName>北米</fullName>
                </value>
                <value>
                    <fullName>メキシコシティ</fullName>
                </value>
                <value>
                    <fullName>欧州</fullName>
                </value>
                <value>
                    <fullName>オセアニア</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeijoMonthInsurance__c</fullName>
        <formula>IF (MONTH(  OtaInsuranceShuki__c  ) = 12, 1, MONTH( OtaInsuranceShuki__c ) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計上月(保険)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeijoMonthMD__c</fullName>
        <formula>IF (  DAY( MankiDate__c )  =  1,  IF (MONTH(MankiDate__c) = 1, 12, MONTH(MankiDate__c)-1) ,MONTH(MankiDate__c)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計上月（MD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeitaiCd__c</fullName>
        <formula>CASE( KeiyakuKeitai__c , 
&quot;法人／単身Global Plus Member&quot;,&quot;S&quot;, 
&quot;法人／家族Global Plus Member&quot;,&quot;F&quot;, 
&quot;個人／単身Global Plus Member&quot;,&quot;S&quot;,
&quot;個人／家族Global Plus Member&quot;,&quot;F&quot;,
&quot;法人／単身Global Member&quot;,&quot;S&quot;, 
&quot;法人／家族Global Member&quot;,&quot;F&quot;, 
&quot;法人／無記名Biz Trip Pass&quot;,&quot;M&quot;, 
&quot;法人／無記名Visitor Pass&quot;,&quot;M&quot;, 
&quot;法人／単身China&quot;, &quot;S&quot;, 
&quot;法人／家族China&quot;, &quot;F&quot;, 
&quot;法人／無記名China&quot;, &quot;M&quot;, 
&quot;個人／単身China&quot;, &quot;S&quot;, 
&quot;個人／家族China&quot;, &quot;F&quot;, 
&quot;法人／単身Asian&quot;, &quot;S&quot;, 
&quot;法人／家族Asian&quot;, &quot;F&quot;, 
&quot;法人／無記名Asian&quot;, &quot;M&quot;, 
&quot;個人／単身Asian&quot;, &quot;S&quot;, 
&quot;個人／家族Asian&quot;, &quot;F&quot;, 
&quot;法人／単身Asian B Plan&quot;, &quot;S&quot;, 
&quot;法人／家族Asian B Plan&quot;, &quot;F&quot;, 
&quot;法人／無記名Asian Biz Trip Plan&quot;, &quot;M&quot;, 
&quot;法人／家族&quot;, &quot;F&quot;, 
&quot;法人／包括&quot;, &quot;H&quot;, 
&quot;S&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>形態コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuCompanyDiscountGroup__c</fullName>
        <formula>KeiyakuCompanyName__r.GroupName__r.Name</formula>
        <label>(契約会社)割引グループ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuCompanyEigyoTanto__c</fullName>
        <formula>KeiyakuCompanyName__r.EigyoTanto__r.Name</formula>
        <label>(契約会社)WB担当者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuCompanyHeadquarters__c</fullName>
        <formula>KeiyakuCompanyName__r.Parent.Name</formula>
        <label>(契約会社)親会社情報</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuCompanyName_Txt__c</fullName>
        <formula>KeiyakuCompanyName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約会社名称（テキスト）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuCompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>契約会社名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N10000000HUqkEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeiyakuDate_CdFmt__c</fullName>
        <formula>IF ( OR(CountryCodes__c=&apos;USA&apos;,CountryCodes__c=&apos;CAN&apos;) , 
RIGHT(TEXT(MONTH(KeiyakuDate__c)+ 100), 2) +&quot;/&quot; +RIGHT(TEXT(DAY(KeiyakuDate__c)+ 100), 2)+&quot;/&quot; +TEXT(YEAR(KeiyakuDate__c)), 
TEXT(YEAR(KeiyakuDate__c)) +&quot;/&quot; +RIGHT(TEXT(MONTH(KeiyakuDate__c)+ 100), 2) +&quot;/&quot; +RIGHT(TEXT(DAY(KeiyakuDate__c)+ 100), 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>（カード）契約日付</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuDate__c</fullName>
        <label>契約日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KeiyakuInfoDiscountPer__c</fullName>
        <formula>CASE( CompanyKeiyakuNo__r.DiscountShubetsu__c , 
&quot;グループ&quot;, CompanyKeiyakuNo__r.GroupDiscountPer__c, 
&quot;団体&quot;, CompanyKeiyakuNo__r.GroupDiscountPer__c,
&quot;グループ・団体&quot;,CompanyKeiyakuNo__r.GroupDiscountPer__c,
&quot;優良&quot;,CompanyKeiyakuNo__r.DiscountPer__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(契約情報)割引率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KeiyakuInfoDiscountShubetsu__c</fullName>
        <formula>CASE(CompanyKeiyakuNo__r.DiscountShubetsu__c , 
&quot;グループ&quot;, &quot;グループ&quot;, 
&quot;団体&quot;, &quot;団体&quot;,
&quot;優良&quot;, &quot;優良&quot;,
&quot;&quot;)</formula>
        <label>(契約情報)適用割引率種別</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuInfoEmail__c</fullName>
        <formula>CompanyKeiyakuNo__r.Email__c</formula>
        <label>(契約情報)メールアドレス</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuInfoKeiyakuArea__c</fullName>
        <formula>TEXT(CompanyKeiyakuNo__r.KeiyakuArea__c)</formula>
        <label>(契約情報)契約地区</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuInfoKeiyakuDate__c</fullName>
        <formula>CompanyKeiyakuNo__r.KeiyakuDate__c</formula>
        <label>(契約情報)契約日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KeiyakuInfoMankiDate__c</fullName>
        <formula>CompanyKeiyakuNo__r.MankiDate__c</formula>
        <label>(契約情報)満期日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KeiyakuInfoTaikaiDate__c</fullName>
        <formula>CompanyKeiyakuNo__r.TaikaiDate__c</formula>
        <label>(契約情報)退会日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KeiyakuKeitai__c</fullName>
        <label>契約形態</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Commodity__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>法人／単身Global Plus Member</fullName>
                </value>
                <value>
                    <fullName>法人／家族Global Plus Member</fullName>
                </value>
                <value>
                    <fullName>個人／単身Global Plus Member</fullName>
                </value>
                <value>
                    <fullName>個人／家族Global Plus Member</fullName>
                </value>
                <value>
                    <fullName>法人／単身Global Member</fullName>
                </value>
                <value>
                    <fullName>法人／家族Global Member</fullName>
                </value>
                <value>
                    <fullName>法人／無記名Biz Trip Pass</fullName>
                </value>
                <value>
                    <fullName>法人／無記名Visitor Pass</fullName>
                </value>
                <value>
                    <fullName>法人／単身China</fullName>
                </value>
                <value>
                    <fullName>法人／家族China</fullName>
                </value>
                <value>
                    <fullName>法人／無記名China</fullName>
                </value>
                <value>
                    <fullName>個人／単身China</fullName>
                </value>
                <value>
                    <fullName>個人／家族China</fullName>
                </value>
                <value>
                    <fullName>法人／単身Asian</fullName>
                </value>
                <value>
                    <fullName>法人／家族Asian</fullName>
                </value>
                <value>
                    <fullName>法人／無記名Asian</fullName>
                </value>
                <value>
                    <fullName>個人／単身Asian</fullName>
                </value>
                <value>
                    <fullName>個人／家族Asian</fullName>
                </value>
                <value>
                    <fullName>法人／単身C&amp;V</fullName>
                </value>
                <value>
                    <fullName>法人／家族C&amp;V</fullName>
                </value>
                <value>
                    <fullName>法人／無記名C&amp;V</fullName>
                </value>
                <value>
                    <fullName>個人／単身C&amp;V</fullName>
                </value>
                <value>
                    <fullName>個人／家族C&amp;V</fullName>
                </value>
                <value>
                    <fullName>法人／単身Asian B Plan</fullName>
                </value>
                <value>
                    <fullName>法人／家族Asian B Plan</fullName>
                </value>
                <value>
                    <fullName>法人／無記名Asian B Plan</fullName>
                </value>
                <value>
                    <fullName>法人／無記名Asian Biz Trip Plan</fullName>
                </value>
                <value>
                    <fullName>法人／単身</fullName>
                </value>
                <value>
                    <fullName>法人／家族</fullName>
                </value>
                <value>
                    <fullName>法人／無記名</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeiyakuKeitai_text__c</fullName>
        <formula>CASE( KeiyakuKeitai__c  ,&quot;法人／単身&quot;, &quot;法人／単身&quot;,
&quot;法人／家族&quot;, &quot;法人／家族&quot;,
&quot;法人／無記名&quot;, &quot;法人／無記名&quot;,
&quot;法人／包括&quot;, &quot;法人／包括&quot;,
&quot;個人／単身&quot;, &quot;個人／単身&quot;,
&quot;個人／家族&quot;, &quot;個人／家族&quot;,
&quot;社員／単身&quot;, &quot;社員／単身&quot;, 
&quot;社員／家族&quot;, &quot;社員／家族&quot;, 
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約形態（テキスト）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuNo__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>契約№</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Keiyaku_Medical_Insurance_EN__c</fullName>
        <formula>CompanyKeiyakuNo__r.Keyaku_Medical_Insurance__r.CompanyNameEng__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(契約会社)現地医療保険(英語名)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KinmuCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>勤務先会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N10000000HuCZEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KokyakuInfoAc__c</fullName>
        <label>AC用顧客情報</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MailHaishin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>メールを配信する場合は、チェックをつけます。</inlineHelpText>
        <label>メール配信</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MankiDate__c</fullName>
        <label>満期日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MedicalBillKessaiHouhou__c</fullName>
        <label>医療費決済方法</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>海外旅行傷害保険</fullName>
                </value>
                <value>
                    <fullName>ウェルビー現地医療保険</fullName>
                </value>
                <value>
                    <fullName>現地医療保険</fullName>
                </value>
                <value>
                    <fullName>OM-S</fullName>
                </value>
                <value>
                    <fullName>クレジットカード付帯保険</fullName>
                </value>
                <value>
                    <fullName>現金</fullName>
                </value>
                <value>
                    <fullName>立て替え保証</fullName>
                </value>
                <value>
                    <fullName>Health Care Program</fullName>
                </value>
                <value>
                    <fullName>未確認</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>会社積立</fullName>
                </value>
                <value>
                    <fullName>旅行総合保険</fullName>
                </value>
                <value>
                    <fullName>Medi-X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MeiKana__c</fullName>
        <label>名（カナ）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeiRoma__c</fullName>
        <label>名（ローマ字）</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberCardKeiyakuCompanyName__c</fullName>
        <formula>CASE( ServiceAreaCd__c , 
&quot;C&quot;,  KeiyakuCompanyName__r.Name, 
&quot;&quot;,  KeiyakuCompanyName__r.Name, 
KeiyakuCompanyName__r.CompanyNameEng__c )</formula>
        <label>（カード）契約会社名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberCardMemberNameEng__c</fullName>
        <formula>CASE( ServiceAreaCd__c , 
&quot;GP&quot;,  MeiRoma__c , 
&quot;G&quot;,  MeiRoma__c , 
&quot;C&quot;,  SeiRoma__c &amp; &quot; &quot; &amp; MeiRoma__c , 
MeiRoma__c &amp; &quot; &quot; &amp; SeiRoma__c)</formula>
        <label>（カード）会員英語名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberCardMemberNameKanji__c</fullName>
        <formula>CASE( ServiceAreaCd__c , 
&quot;GP&quot;, SeiRoma__c ,
&quot;G&quot;, SeiRoma__c ,
&quot;C&quot;, Name ,
&quot;&quot; )</formula>
        <label>（カード）会員漢字名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberCardSubTitle__c</fullName>
        <formula>CASE( KeiyakuKeitai__c , 
&quot;法人／無記名China&quot;, &quot;FOR SHORT-TERM TRAVEL ONLY&quot;,
&quot;法人／無記名C&amp;V&quot;, &quot;FOR SHORT-TERM TRAVEL ONLY&quot;,
&quot;法人／無記名Asian&quot;, &quot;FOR SHORT-TERM TRAVEL ONLY&quot;,
&quot;法人／無記名Asian B Plan&quot;, &quot;FOR SHORT-TERM TRAVEL ONLY&quot;,
&quot;&quot;)</formula>
        <label>（カード）サブタイトル</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberKubunB__c</fullName>
        <formula>CASE( Commodity__c ,
&quot;メディック&quot;, IF ( TaikaiDate__c  &lt;=  TODAY() , &quot;退会者&quot;, &quot;会員&quot;), 
&quot;留学生&quot;, IF ( TaikaiDate__c  &lt;=  TODAY() , &quot;退会者&quot;, &quot;会員&quot;), 
&quot;チャイナボウル&quot;, IF ( TaikaiDate__c  &lt;=  TODAY() , &quot;退会者&quot;, &quot;会員&quot;), 
&quot;ベトナムメディック&quot;, IF ( TaikaiDate__c  &lt;=  TODAY() , &quot;退会者&quot;, &quot;会員&quot;), 
&quot;メディフル&quot;, IF ( TaikaiDate__c  &lt;=  TODAY() , &quot;退会者&quot;, &quot;会員&quot;), 
&quot;Medi-X&quot;, IF ( TaikaiDate__c  &lt;=  TODAY() , &quot;Medi-X退会者&quot;, &quot;Medi-X会員&quot;),
&quot;&quot;)</formula>
        <label>会員区分B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberKubun__c</fullName>
        <label>会員区分</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberNo__c</fullName>
        <externalId>true</externalId>
        <label>会員番号</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <inlineHelpText>入力する際は、
－（ハイフン）を抜いて入力して下さい。
例）　○0335380180
　　　×03-3538-0180</inlineHelpText>
        <label>携帯TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MukimeiFlg__c</fullName>
        <formula>IF(and(CASE( KeiyakuKeitai__c , 
&quot;法人／無記名China&quot;, 1, 
&quot;法人／無記名Asian&quot;, 1,
&quot;法人／無記名C&amp;V&quot;, 1,
&quot;法人／無記名Asian B Plan&quot;, 1,
&quot;法人／無記名&quot;, 1,
0)=1, if(or(BEGINS(Name, &quot;無記&quot;) ,BEGINS(Name,&quot;Unname&quot;)),0,1)=1 ),&quot;1&quot;,&quot;0&quot;)</formula>
        <label>MukimeiFlg</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameKana__c</fullName>
        <formula>SeiKana__c &amp;&quot;　&quot;&amp; MeiKana__c</formula>
        <label>会員氏名（カナ）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>国籍</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>台湾</fullName>
                </value>
                <value>
                    <fullName>韓国</fullName>
                </value>
                <value>
                    <fullName>アメリカ</fullName>
                </value>
                <value>
                    <fullName>イラン</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>オーストラリア</fullName>
                </value>
                <value>
                    <fullName>オーストリア</fullName>
                </value>
                <value>
                    <fullName>オランダ</fullName>
                </value>
                <value>
                    <fullName>カナダ</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>スイス</fullName>
                </value>
                <value>
                    <fullName>スペイン</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>チェコ</fullName>
                </value>
                <value>
                    <fullName>トルコ</fullName>
                </value>
                <value>
                    <fullName>ドイツ</fullName>
                </value>
                <value>
                    <fullName>ニュージーランド</fullName>
                </value>
                <value>
                    <fullName>ネパール</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>フランス</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>ベラルーシ</fullName>
                </value>
                <value>
                    <fullName>ベルギー</fullName>
                </value>
                <value>
                    <fullName>ポーランド</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NickName__c</fullName>
        <inlineHelpText>香港人のニックネームを入力します。
通常は、何も入力しません。</inlineHelpText>
        <label>ニックネーム</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Health_Insurance__c</fullName>
        <label>備考（健保情報）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Child_Birth__c</fullName>
        <formula>TEXT(CompanyKeiyakuNo__r.OMS_Child_Birth__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(OMS)Child Birth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Dental__c</fullName>
        <formula>TEXT(CompanyKeiyakuNo__r.OMS_Dental__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(OMS)Dental</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Examination__c</fullName>
        <formula>TEXT(CompanyKeiyakuNo__r.OMS_Examination__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(OMS)Examination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Medical__c</fullName>
        <formula>TEXT(CompanyKeiyakuNo__r.OMS_Medical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(OMS)Medical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Vaccination__c</fullName>
        <formula>TEXT(CompanyKeiyakuNo__r.OMS_Vaccination__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(OMS)Vaccination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtaAgencyHk__c</fullName>
        <formula>CASE( OtaName__c , 
&quot;三井住友海上火災保険（香港)有限公司&quot;, &quot;1&quot;, 
&quot;株式会社損害保険ジャパン　香港支店&quot;, &quot;1&quot;,
&quot;東京海上火災保険（香港）有限公司&quot;,&quot;1&quot;,
&quot;日本興亜保険（亜洲）有限公司&quot;,&quot;1&quot;,
&quot;American International Underwriters,Limited&quot;,&quot;1&quot;,
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>取扱(香港)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtaAgency__c</fullName>
        <label>取扱</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WB扱い</fullName>
                </value>
                <value>
                    <fullName>WB以外</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtaInsuranceShiki__c</fullName>
        <label>保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OtaInsuranceShuki__c</fullName>
        <label>保険満期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OtaKeepPlace__c</fullName>
        <label>保管場所</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtaName__c</fullName>
        <label>OTA保険会社名称</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未確認</fullName>
                </value>
                <value>
                    <fullName>保険なし</fullName>
                </value>
                <value>
                    <fullName>AIU保険会社</fullName>
                </value>
                <value>
                    <fullName>JI傷害火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>東京海上日動火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>富士火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>日新火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>朝日火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>共栄火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>セゾン自動車火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>セコム損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>ニッセイ同和損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>あいおい損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>日本興亜損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>ニッセイ同和損害保険株式会社(JI)</fullName>
                </value>
                <value>
                    <fullName>日立 Health Care Program</fullName>
                </value>
                <value>
                    <fullName>Chubb損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険（香港)有限公司</fullName>
                </value>
                <value>
                    <fullName>株式会社損害保険ジャパン</fullName>
                </value>
                <value>
                    <fullName>日本財産保険(香港)有限公司</fullName>
                </value>
                <value>
                    <fullName>AIG INSURANCE HONG KONG LTD</fullName>
                </value>
                <value>
                    <fullName>東京海上火災保険（香港）有限公司</fullName>
                </value>
                <value>
                    <fullName>ニュ－インディア保険会社</fullName>
                </value>
                <value>
                    <fullName>平安養老保険</fullName>
                </value>
                <value>
                    <fullName>中国人民保険</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険公司　上海分公司</fullName>
                </value>
                <value>
                    <fullName>三菱東京UFJ Health Care Program</fullName>
                </value>
                <value>
                    <fullName>長生人寿保険有限公司</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災有限公司　広州分公司</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtaNote__c</fullName>
        <label>OTA備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtaRyaku__c</fullName>
        <formula>CASE( OtaName__c , 
&quot;未確認&quot;,&quot;未確認&quot;,
&quot;保険なし&quot;,&quot;なし&quot;,
&quot;AIU保険会社&quot;,&quot;AIU&quot;,
&quot;JI傷害火災保険株式会社&quot;,&quot;JI&quot;,
&quot;東京海上日動火災保険株式会社&quot;,&quot;東海&quot;,
&quot;富士火災海上保険株式会社&quot;,&quot;富士&quot;,
&quot;日新火災海上保険株式会社&quot;,&quot;日新&quot;,
&quot;朝日火災海上保険株式会社&quot;,&quot;朝日&quot;,
&quot;共栄火災海上保険株式会社&quot;,&quot;共栄&quot;,
&quot;セゾン自動車火災保険株式会社&quot;,&quot;セゾン&quot;,
&quot;セコム損害保険株式会社&quot;,&quot;セコム&quot;,
&quot;ニッセイ同和損害保険株式会社&quot;,&quot;ニ同和&quot;,
&quot;あいおい損害保険株式会社&quot;,&quot;あいおい&quot;,
&quot;日本興亜損害保険株式会社&quot;,&quot;日興亜&quot;,
&quot;ニッセイ同和損害保険株式会社(JI)&quot;,&quot;ニ同和JI&quot;,
&quot;日立 Health Care Program&quot;,&quot;日立HCP&quot;,
&quot;エース損害保険株式会社&quot;,&quot;エース&quot;,
&quot;三井住友海上火災保険株式会社&quot;,&quot;三井&quot;,
&quot;三井住友海上火災保険（香港)有限公司&quot;,&quot;三井HK&quot;,
&quot;株式会社損害保険ジャパン&quot;,&quot;損ジャ&quot;,
&quot;日本財産保険(香港)有限公司&quot;,&quot;SJNK(香港)&quot;,
&quot;株式会社損害保険ジャパン　香港支店&quot;,&quot;損ジャHK&quot;,
&quot;東京海上火災保険（香港）有限公司&quot;,&quot;東海HK&quot;,
&quot;ニュ－インディア保険会社&quot;,&quot;インディア&quot;,
&quot;平安人寿保険&quot;,&quot;平安人寿&quot;,
&quot;平安養老保険&quot;,&quot;平安養老&quot;,
&quot;三井住友海上火災保険公司　上海分公司&quot;,&quot;三井上海&quot;,
&quot;三菱東京UFJ Health Care Program&quot;,&quot;三菱HCP&quot;,
&quot;長生人寿保険有限公司&quot;,&quot;長生人寿&quot;,
&quot;American International Underwriters,Limited&quot;,&quot;AIUL&quot;,
&quot;三井住友海上火災有限公司　広州分公司&quot;,&quot;三井広州&quot;,
&quot;日本興亜保険（亜洲）有限公司&quot;,&quot;日興亜ア&quot;,
&quot;あいおいニッセイ同和損害保険株式会社&quot;,&quot;あいおい同和&quot;,
&quot;United Insurance Company of Vietnam&quot;,&quot;UICV&quot;,
&quot;マーシュ&quot;,&quot;マーシュ&quot;, 
&quot;損保ジャパン日本興亜インドネシア&quot;,&quot;SJNK-ID&quot;, 
&quot;三井住友インドネシア&quot;,&quot;MS-ID&quot;, 
&quot;PT Tokio Marine Life Insurance Indonesia&quot;,&quot;TMLI&quot;, 
&quot;三井住友海上火災保険公司　江蘇分公司&quot;,&quot;三井江蘇&quot;,
&quot;損害保険ジャパン日本興亜株式会社&quot;,&quot;SJNK&quot;,
&quot;Health Care Program&quot;,&quot;HCP&quot;,
&quot;カード付帯&quot;,&quot;カード&quot;,
&quot;その他保険&quot;,&quot;その他&quot;,
&quot;&quot;)</formula>
        <label>OTA略称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherMemberNo__c</fullName>
        <inlineHelpText>ISI国際学院、地球びと、契約会社より要望があった場合のみ入力します。</inlineHelpText>
        <label>その他会員番号</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PassportNo__c</fullName>
        <label>パスポート№</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcd__c</fullName>
        <label>郵便番号</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>CASE( Jurisdiction__c , 
&quot;北京&quot;, &quot;1 華北&quot;, 
&quot;天津&quot;, &quot;1 華北&quot;, 
&quot;大連&quot;, &quot;1 華北&quot;, 
&quot;青島&quot;, &quot;1 華北&quot;, 
&quot;上海&quot;, &quot;2 華中&quot;, 
&quot;蘇州&quot;, &quot;3 蘇州&quot;,
&quot;深セン&quot;, &quot;4 深セン&quot;, 
&quot;東莞&quot;, &quot;4　深セン&quot;,
&quot;広州&quot;, &quot;5 広州&quot;, 
&quot;香港&quot;, &quot;6 香港&quot;, 
&quot;ハノイ&quot;, &quot;7 ベトナム&quot;, 
&quot;東京&quot;, &quot;8 日本&quot;, 
&quot;大阪&quot;, &quot;8 日本&quot;, 
&quot;9 その他&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>地域</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_and_Area__c</fullName>
        <label>エリア</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>アジア</fullName>
                </value>
                <value>
                    <fullName>北米</fullName>
                </value>
                <value>
                    <fullName>中南米</fullName>
                </value>
                <value>
                    <fullName>欧州</fullName>
                </value>
                <value>
                    <fullName>オセアニア</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>中東</fullName>
                </value>
                <value>
                    <fullName>アフリカ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>続柄</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>会員本人</fullName>
                    <default>true</default>
                    <label>会員本人</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RescueCost__c</fullName>
        <label>救援者費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Security_Dept_Phone__c</fullName>
        <formula>KeiyakuCompanyName__r.Security_Dept_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>セキュリティ担当部署電話番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Dept__c</fullName>
        <formula>KeiyakuCompanyName__r.Security_Dept__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>セキュリティ担当部署</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_PIC_Email__c</fullName>
        <formula>KeiyakuCompanyName__r.Security_PIC_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>セキュリティ担当者Email</label>
        <type>Text</type>
    </fields>
</CustomObject>